Tests fix